--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGODB_CNN=mongodb://127.0.0.1:27017/cafeDB
+JWT_SECRET=N38GT#DBHE@%!GvX!h9U66g9J!W&@&#RHkVSj7!^WHBS3r76yP5G3xF8w&@RBW^KoiFH2qQNc%P@g9LoyVd3ezBaTbx*$ei&oGx
