JWT - Access and Refresh tokens

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://server:fnVA2EZVPDbDDtfm@tecpass.rvwe8.mongodb.net/tecpass
-JWT_SECRET=N38GT#DBHE@%!GvX!h9U66g9J!W&@&#RHkVSj7!^WHBS3r76yP5G3xF8w&@RBW^KoiFH2qQNc%P@g9LoyVd3ezBaTbx*$ei&oGx
+ACCESS_TOKEN_SECRET=z2WkqkeAVgYFqB#K6zXdw2c@dtmcoV8JUSc$Mk%5nQYr9vkRPtJg89WPVCnkNZQVzjnQH^avp4kpGnFAc4JoY#$2i2Y4m*qHrzT
+REFRESH_TOKEN_SECRET=N38GT#DBHE@%!GvX!h9U66g9J!W&@&#RHkVSj7!^WHBS3r76yP5G3xF8w&@RBW^KoiFH2qQNc%P@g9LoyVd3ezBaTbx*$ei&oGx
