Updated DB Mongo models

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "node-fetch": "^3.0.0",
+    "onesignal-node": "^3.3.0"
   }
 }
